Fixed Checkbox alignment

--- a/src/components/ActiveAlgoOrdersModal/style.scss
+++ b/src/components/ActiveAlgoOrdersModal/style.scss
@@ -88,6 +88,7 @@
 
     &.ao-checkbox {
       min-width: 43px;
+      margin-top: -20px;
     }
   }
   
